--- a/src/gtk3/common/scss/gtk-widgets/_dialog.scss
+++ b/src/gtk3/common/scss/gtk-widgets/_dialog.scss
@@ -11,7 +11,7 @@ dialog {
   
   .titlebar {
     background-color: $titlebar_bg_color;
-    box-shadow: inset 0 0 0 $border_size $titlebar_hl_color;
+    box-shadow: $titlebar_border;
     
     image,
     label {
