--- a/src/gtk3/common/scss/gtk-widgets/_header-title-bars.scss
+++ b/src/gtk3/common/scss/gtk-widgets/_header-title-bars.scss
@@ -12,12 +12,14 @@ titlebar {
   border-radius: $corner_radius $corner_radius 0 0;
   background-color: $titlebar_bg_color;
   color: $titlebar_fg_color;
-  box-shadow: inset 0 0 0 $border_size $titlebar_hl_color;
+  box-shadow: $titlebar_border;
   
   &:backdrop {
     background-color: lighten($titlebar_bg_color, 5%);
     color: to600($titlebar_fg_color);
-    box-shadow: inset 0 0 0 $border_size lighten($titlebar_hl_color, 5%);
+    box-shadow: 
+    inset 0 0 0 $border_size lighten($titlebar_hl_color, 5%),
+    inset 0 -1 * $border_size 0 0 lighten($titlebar_dl_color, 5%);
   }
   
   .maximized &,
